# Clavis

./: .gitignore  CMakeLists.txt  LICENSE  README.md  deploy.sh  make.sh  makefile
__windows__/: appinfo.rc  clavis_install_script.iss  my.rc
__windows__/windows_assets/etc/gtk-3.0/: settings.ini
__windows__/windows_assets/lib/gdk-pixbuf-2.0/2.10.0/: loaders.cache
__windows__/windows_assets/share/mime/: XMLnamespaces  aliases  generic-icons  globs  globs2  magic  mime.cache  subclasses  types
__windows__/windows_assets/share/mime/application/: annodex.xml  fits.xml  geo+json.xml  gml+xml.xml  gpx+xml.xml  illustrator.xml  jrd+json.xml  json-patch+json.xml  json.xml  ld+json.xml  mathematica.xml  mbox.xml  msword-template.xml  msword.xml  mxf.xml  ovf.xml  owl+xml.xml  oxps.xml  pgp-encrypted.xml  pkcs12.xml  pkcs7-mime.xml  pkcs8-encrypted.xml  pkcs8.xml  pkix-crl.xml  postscript.xml  ram.xml  raml+yaml.xml  schema+json.xml  sparql-query.xml  sparql-results+xml.xml  toml.xml  trig.xml  vnd.amazon.mobi8-ebook.xml  vnd.android.package-archive.xml  vnd.appimage.xml  vnd.apple.keynote.xml  vnd.apple.numbers.xml  vnd.apple.pages.xml  vnd.apple.pkpass.xml  vnd.chess-pgn.xml  (+214 more)
__windows__/windows_assets/share/mime/audio/: aac.xml  ac3.xml  amr-wb.xml  amr.xml  annodex.xml  basic.xml  flac.xml  midi.xml  mobile-xmf.xml  mp2.xml  mp4.xml  mpeg.xml  ogg.xml  prs.sid.xml  usac.xml  vnd.audible.aax.xml  vnd.dts.hd.xml  vnd.dts.xml  webm.xml  x-adpcm.xml  x-aifc.xml  x-aiff.xml  x-amzxml.xml  x-ape.xml  x-dff.xml  x-dsf.xml  x-flac+ogg.xml  x-gsm.xml  x-iriver-pla.xml  x-it.xml  x-m4b.xml  x-m4r.xml  x-matroska.xml  x-minipsf.xml  x-mo3.xml  x-ms-asx.xml  x-ms-wma.xml  x-musepack.xml  x-opus+ogg.xml  x-pn-audibleaudio.xml  (+16 more)
__windows__/windows_assets/share/mime/font/: collection.xml  woff.xml  woff2.xml
__windows__/windows_assets/share/mime/image/: astc.xml  avif.xml  cgm.xml  g3fax.xml  gif.xml  heif.xml  jp2.xml  jpeg.xml  jpm.xml  jpx.xml  jxl.xml  ktx.xml  ktx2.xml  openraster.xml  png.xml  rle.xml  svg+xml-compressed.xml  vnd.djvu+multipage.xml  vnd.microsoft.icon.xml  vnd.ms-modi.xml  webp.xml  x-3ds.xml  x-adobe-dng.xml  x-canon-cr3.xml  x-dds.xml  x-gimp-gbr.xml  x-gimp-gih.xml  x-gimp-pat.xml  x-icns.xml  x-jp2-codestream.xml  x-niff.xml  x-nikon-nrw.xml  x-portable-anymap.xml  x-tiff-multipage.xml  x-win-bitmap.xml  x-xcursor.xml
__windows__/windows_assets/share/mime/inode/: blockdevice.xml  fifo.xml  mount-point.xml
__windows__/windows_assets/share/mime/message/: delivery-status.xml  disposition-notification.xml  partial.xml  rfc822.xml
__windows__/windows_assets/share/mime/model/: 3mf.xml  gltf+json.xml  gltf-binary.xml  iges.xml  mtl.xml  obj.xml  stl.xml
assets/: clavis.desktop  sempiternum.desktop
bundled/assets/: PKGBUILD-base.in  PKGBUILD-git.in  clavis.desktop.in
include/: algorithms.h  clavis_constants.h  clavis_macros.h  clavis_normal.h  clavis_passgen.h  clavis_popup.h  clavis_regex.h  file_io.h  folderstate.h  gui_templates.h
locale/: clavis.pot
locale/ca/: clavis.po
locale/ca/LC_MESSAGES/: clavis.mo
locale/es/: clavis.po  clavis.po~
locale/es/LC_MESSAGES/: clavis.mo
locale/ru/: clavis.po
locale/ru/LC_MESSAGES/: clavis.mo
src/: algorithms.c  clavis_normal.c  clavis_passgen.c  clavis_popup.c  clavis_regex.c  file_io.c  folderstate.c  gui_templates.c  macros.h  main.c
src/clavis/: Clavis.cpp
src/clavis/GUI/: App.cpp  MainWindow.cpp  Toolbar.cpp
src/clavis/GUI/Tables/: StringTable.cpp  WidgetTable.cpp
src/clavis/GUI/Titlebar/: Titlebar.cpp  TitlebarButton.cpp
src/clavis/GUI/components/: IconButton.cpp  LabeledIconButton.cpp  PictureInsert.cpp  RequiredEntry.cpp  StateIconButton.cpp  Tabber.cpp  TaskIconButton.cpp  ToggleIconButton.cpp
src/clavis/GUI/lib/: MainLoopHalter.cpp
src/clavis/GUI/menubar/: MenuBar.cpp
src/clavis/GUI/palettes/: AboutPalette.cpp  DonatePalette.cpp  ExceptionPalette.cpp  HelpPalette.cpp  NewPasswordPalette.cpp  Palette.cpp  PasswordStoreDataPalette.cpp  SimpleEntryPalette.cpp  SimpleYesNoQuestionPalette.cpp
src/clavis/GUI/password_store_manager/: PasswordStoreManager.cpp
src/clavis/GUI/signals/: UniqueSignalTimeout.cpp  UniqueSignalTimeoutDispatcher.cpp
src/clavis/GUI/workflows/: NewItemWorkflow.cpp
src/clavis/error/: ClavisError.cpp
src/clavis/extensions/: GPGWrapper.cpp  GUID.cpp  GUIExtensions.cpp  GitWrapper.cpp  RNG.cpp  StringHelper.cpp
src/clavis/image/: image.cpp
src/clavis/language/: Language.cpp
src/clavis/password_store/: Password.cpp  PasswordGenerator.cpp  PasswordStore.cpp  PasswordStoreElement.cpp
src/clavis/settings/: Settings.cpp  SettingsImpl.cpp
src/clavis/system/: Extensions.cpp  ProcessWrapper.cpp
src/include/GUI/: App.h  MainWindow.h  Toolbar.h
src/include/GUI/Tables/: StringTable.h  WidgetTable.h
src/include/GUI/Titlebar/: Titlebar.h  TitlebarButton.h
src/include/GUI/components/: IconButton.h  LabeledIconButton.h  PictureInsert.h  RequiredEntry.h  StateIconButton.h  Tabber.h  TaskIconButton.h  ToggleIconButton.h
src/include/GUI/lib/: MainLoopHalter.h
src/include/GUI/menubar/: MenuBar.h
src/include/GUI/palettes/: AboutPalette.h  CreditsPalette.h  DonatePalette.h  DualChoicePalette.h  ExceptionPalette.h  HelpPalette.h  LicensePalette.h  NewPasswordPalette.h  Palette.h  PasswordStoreDataPalette.h  SimpleEntryPalette.h  SimpleYesNoQuestionPalette.h
src/include/GUI/password_store_manager/: PasswordStoreManager.h
src/include/GUI/signals/: UniqueSignalTimeout.h  UniqueSignalTimeoutDispatcher.h
src/include/GUI/workflows/: NewItemWorkflow.h
src/include/error/: ClavisError.h
src/include/extensions/: GPGWrapper.h  GUID.h  GUIExtensions.h  GitWrapper.h  RNG.h  StringHelper.h
src/include/image/: icons.h  image.h
src/include/language/: Language.h  LanguageDefinitions.h
src/include/password_store/: Password.h  PasswordGenerator.h  PasswordStore.h  PasswordStoreElement.h
src/include/settings/: SettingImpl.h  Settings.h  SettingsDefinitions.h
src/include/system/: Extensions.h  ProcessWrapper.h
(+148 files in other folders)
